# oglsl

./: README.md  dune-project  oglsl.opam
examples/offshoring/: offshoring.ml
lib/: dune  oglsl.ml
